fix overflow responsive

--- a/css/board.css
+++ b/css/board.css
@@ -298,6 +298,5 @@ body {
     height: max-content;
     display: flex;
     gap: 24px;
-    overflow-x: auto;
   }
 }
